--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.17.0",
     "@ionic-native/core": "~4.15.0",
-    "@ionic-native/file": "^4.18.0",
-    "@ionic-native/file-chooser": "^4.18.0",
+    "@ionic-native/file": "^4.20.0",
+    "@ionic-native/file-chooser": "^4.20.0",
     "@ionic-native/file-transfer": "^4.17.0",
     "@ionic-native/firebase": "^4.17.0",
     "@ionic-native/firebase-authentication": "^4.18.0",
@@ -36,9 +36,9 @@
     "cordova-ios": "4.5.5",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file": "6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-filechooser": "^1.0.1",
+    "cordova-plugin-filechooser": "1.2.0",
     "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-firebase-authentication": "^1.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
