--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "underscore": "^1.9.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
